--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -126,7 +126,7 @@ stages:
             ${{ if eq(parameters.shaUse, 'true') }}:
               pool:
                 name: $[variables['${{var.key}}ShaPool']]
-                demands: Agent.Name -equals Agent-Linux-${{variables.secRegionId}}$[variables['${{variables.agShaCode}}']]-cg-0-ci-0
+                demands: Agent.Name -equals Agent-Linux-${{variables.secRegionId}}$(${{variables.agShaCode}})-cg-0-ci-0
             jobs:
               - deployment: "Deploy_${{var.Key}}"
                 displayName: Updated content of CDN
