--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -121,12 +121,12 @@ stages:
               - name: ServConName
                 value: ${{ format('{0}{1}', var.key, 'ServCon') }}
               - name: agShaCode
-                value: ${{ format('{0}{1}', var.key, 'ShaCode') }}
+                value: $(${{ format('{0}{1}', var.key, 'ShaCode') }})
             displayName: "Deployment [${{var.Key}}] ${{parameters.location}}"
             ${{ if eq(parameters.shaUse, 'true') }}:
               pool:
                 name: $[variables['${{var.key}}ShaPool']]
-                demands: Agent.Name -equals Agent-Linux-${{variables.secRegionId}}$(${{variables.agShaCode}})-cg-0-ci-0
+                demands: Agent.Name -equals Agent-Linux-${{variables.secRegionId}}${{variables.agShaCode}}-cg-0-ci-0
             jobs:
               - deployment: "Deploy_${{var.Key}}"
                 displayName: Updated content of CDN
