--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -72,6 +72,13 @@ variables:
     value: ${{ or(eq(parameters.pr, 'true'), contains(variables['Build.SourceBranch'],'release')) }}
   - name: applicationFullName
     value: "ui-toolkit"
+  - name: agShaCode
+    ${{ if in(var.key, 'tran','dev') }}:
+      value: $(tranShaCode)
+    ${{ elseif in(var.key, 'test','pp') }}:
+      value: $(ppShaCode)
+    ${{ elseif in(var.key, 'pr') }}:
+      value: $(prhaCode)
 
 stages:
   # Code Scans & Build the artifact for deployment
@@ -120,8 +127,6 @@ stages:
                 value: "$(SubShortName)-shd"
               - name: ServConName
                 value: ${{ format('{0}{1}', var.key, 'ServCon') }}
-              - name: agShaCode
-                value: $[variables['${{var.key}}ShaCode']]
             displayName: "Deployment [${{var.Key}}] ${{parameters.location}}"
             ${{ if eq(parameters.shaUse, 'true') }}:
               pool:
