--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "govuk_template_jinja": "^0.26.0",
     "govuk-elements-sass": "^3.1.2",
     "govuk-frontend": "^5.9.0",
+    "helmet": "^8.1.0",
     "jquery": "^3.6.0",
     "js-cookie": "^3.0.1",
     "nunjucks": "^3.2.0"
