--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "DfE front-end toolkit",
   "main": "index.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV='development' gulp run-server build-gds",
+    "dev": "gulp run-server build-gds",
     "dev:checks": "npm run lint",
     "format": "prettier . --write",
     "build": "gulp build-gds",
@@ -31,15 +31,12 @@
     "@eslint/js": "^9.31.0",
     "browserify": "^17.0.1",
     "cors": "^2.8.5",
-    "cross-env": "^7.0.3",
     "eslint": "^9.31.0",
     "eslint-formatter-junit": "^8.40.0",
     "eslint-plugin-jest": "^28.14.0",
     "globals": "^15.15.0",
     "gulp": "^5.0.1",
-    "gulp-concat": "^2.6.1",
     "gulp-dart-sass": "^1.0.2",
-    "gulp-if": "^3.0.0",
     "gulp-rename": "^2.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.0",
